// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkButton should render correctly 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should render correctly with iconAlignment="leading" 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
        undefined,
        undefined,
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
          undefined,
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "justifyContent": "space-between",
          },
          Object {
            "flexDirection": "row-reverse",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
                undefined,
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "lineHeight": 24,
            },
            Object {
              "fontSize": 16,
              "lineHeight": 16,
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
                undefined,
              ],
              Object {},
              Array [
                Object {
                  "lineHeight": 16,
                },
                Object {
                  "marginLeft": 4,
                },
                Object {
                  "marginLeft": 0,
                  "marginRight": 4,
                },
              ],
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should render correctly with iconAlignment="trailing" 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
        undefined,
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "lineHeight": 24,
            },
            Object {
              "fontSize": 16,
              "lineHeight": 16,
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
              ],
              Object {},
              Array [
                Object {
                  "lineHeight": 16,
                },
                Object {
                  "marginLeft": 4,
                },
              ],
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should render correctly with type="destructive" 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          Object {
            "borderColor": "rgb(230, 228, 235)",
            "borderWidth": 0,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
        ],
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                Object {
                  "color": "rgb(255, 84, 82)",
                },
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should render correctly with type="featured" 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
        ],
        Object {
          "backgroundColor": "rgb(250, 72, 138)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should render correctly with type="primary" 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should render correctly with type="secondary" 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          Object {
            "borderColor": "rgb(230, 228, 235)",
            "borderWidth": 0,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
        ],
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                Object {
                  "color": "rgb(0, 178, 214)",
                },
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should support elements as icons 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
        Object {
          "width": 32,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          Object {
            "paddingHorizontal": 0,
          },
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        foo
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should support having an icon as well as a title 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
        undefined,
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "lineHeight": 24,
            },
            Object {
              "fontSize": 16,
              "lineHeight": 16,
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
              ],
              Object {},
              Array [
                Object {
                  "lineHeight": 16,
                },
                Object {
                  "marginLeft": 4,
                },
              ],
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should support having only an icon 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
        Object {
          "width": 32,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          Object {
            "paddingHorizontal": 0,
          },
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "lineHeight": 24,
            },
            Object {
              "fontSize": 16,
              "lineHeight": 16,
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
              ],
              Object {},
              Array [
                Object {
                  "lineHeight": 16,
                },
                undefined,
              ],
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should support overwriting styles 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
      ],
      Object {
        "width": 100,
      },
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should support the "disabled" property 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
        undefined,
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
        "disabled",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          Object {
            "borderColor": "transparent",
          },
        ],
        Object {
          "backgroundColor": "rgb(230, 228, 235)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                Object {
                  "color": "rgb(178, 174, 189)",
                },
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should support the "icon" and "large" property 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
        Object {
          "minHeight": 48,
        },
        undefined,
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          Object {
            "minHeight": 48,
            "paddingHorizontal": 16,
          },
          undefined,
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
          Object {
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
                undefined,
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "lineHeight": 24,
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
                undefined,
              ],
              Object {},
              Array [
                Object {
                  "lineHeight": 16,
                },
                undefined,
                Object {
                  "marginLeft": 4,
                },
              ],
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should support the "iconOnly" and "large" property 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
        Object {
          "minHeight": 48,
        },
        Object {
          "width": 48,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          Object {
            "minHeight": 48,
            "paddingHorizontal": 16,
          },
          Object {
            "paddingHorizontal": 0,
          },
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "lineHeight": 24,
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
                undefined,
              ],
              Object {},
              Array [
                Object {
                  "lineHeight": 16,
                },
                undefined,
                undefined,
              ],
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should support the "large" and secondary property 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
        Object {
          "minHeight": 48,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          Object {
            "borderColor": "rgb(230, 228, 235)",
            "borderWidth": 0,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          Object {
            "minHeight": 48,
            "paddingHorizontal": 16,
          },
        ],
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                Object {
                  "color": "rgb(0, 178, 214)",
                },
                undefined,
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButton should support the "large" property 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
        Object {
          "minHeight": 48,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          Object {
            "minHeight": 48,
            "paddingHorizontal": 16,
          },
        ],
        Object {
          "backgroundColor": "rgb(0, 215, 117)",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
                undefined,
              ],
              Object {},
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkButtonThemed should render correctly 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "borderRadius": 40,
          "height": 36,
        },
      ],
      null,
    ]
  }
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Lorem ipsum"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hitSlop={undefined}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "borderRadius": 40,
            "height": 36,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
        ],
        Object {
          "backgroundColor": "green",
        },
      ]
    }
    testID={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "rgb(255, 255, 255)",
                  "lineHeight": 18,
                },
              ],
              Object {
                "color": "red",
              },
            ],
          ]
        }
      >
        LOREM IPSUM
      </Text>
    </View>
  </View>
</View>
`;
